// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation without context displays a generic error message 1`] = `
<div
  className="openforms-card"
>
  <header
    className="openforms-card__header"
  >
    <h2
      className="utrecht-heading-2 openforms-title"
    >
      Payment overview
    </h2>
  </header>
  <div
    className="openforms-card__body"
  >
     
    <div
      className="openforms-alert openforms-alert--error"
    >
      <span
        className="openforms-alert__icon openforms-alert__icon--wide"
      >
        <span
          className="fa fas fa-icon fa-exclamation-circle"
        />
      </span>
      <div
        className="openforms-body"
      >
        We can't display any payment information - did you maybe get here by accident?
      </div>
    </div>
     
  </div>
</div>
`;

exports[`on valid redirect renders an error message on failure 1`] = `
<div
  className="openforms-card"
>
  <header
    className="openforms-card__header"
  >
    <h2
      className="utrecht-heading-2 openforms-title"
    >
      Payment overview
    </h2>
  </header>
  <div
    className="openforms-card__body"
  >
     
    <div
      className="openforms-body"
    >
      <div
        className="openforms-alert openforms-alert--error"
      >
        <span
          className="openforms-alert__icon openforms-alert__icon--wide"
        >
          <span
            className="fa fas fa-icon fa-exclamation-circle"
          />
        </span>
        <div
          className="openforms-body"
        >
          The payment has failed. If you aborted the payment, please complete payment from the confirmation email.
        </div>
      </div>
    </div>
    <a>
      some link
    </a>
     
  </div>
</div>
`;

exports[`on valid redirect renders the status information 1`] = `
<div
  className="openforms-card"
>
  <header
    className="openforms-card__header"
  >
    <h2
      className="utrecht-heading-2 openforms-title"
    >
      Payment overview
    </h2>
  </header>
  <div
    className="openforms-card__body"
  >
     
    <div
      className="openforms-body"
    >
      Your payment has been received.
    </div>
    <a>
      some link
    </a>
     
  </div>
</div>
`;
